# cmake_dummy_project

./: CMakeLists.txt
src/: main  main.cpp
