# cmake_minimum_required(VERSION 3.10)

# project(MyCppProject LANGUAGES CXX)

# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED True)

# # Include directories for header files
# include_directories(include)

# # Add the executable target
# add_executable(MyCppProject src/main.cpp)


cmake_minimum_required(VERSION 3.10)

project(MyCppProject)

add_executable(MyCppProject src/main.cpp)
